# xradar

./: .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  AUTHORS.rst  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  LICENSE-CC-BY-SA-4.0  MANIFEST.in  Makefile  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  transform.ipynb
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  upload_pypi.yml
.github/workflows/: ci.yml  upload_pypi.yml
ci/: notebooktests.yml  unittests.yml
docs/: Makefile  ai_policy.md  conf.py  datamodel.md  exporters.md  history.md  importers.md  index.md  index.rst  installation.md  installation.rst  links.rst  make.bat  usage.md  usage.rst
docs/_static/: style.css
docs/_templates/: layout.html
docs/notebooks/: Accessors.md  Assign_GeoCoords.md  CfRadial1.md  CfRadial1_Export.md  CfRadial1_Model_Transformation.md  Furuno.md  GAMIC.md  Georeference_TargetCRS.ipynb  Georeference_TargetCRS.md  HaloPhotonics.md  IMD.ipynb  IMD.md  Iris.md  MRR.md  Mapping_Sweeps.md  Multi-Volume-Concatenation.md  NDPointIndex.md  NexradLevel2.md  ODIM_H5.md  Rainbow.md  Read-plot-Sigmet-data-from-AWS.md  Transform.md  UF.md  angle_reindexing.md  conftest.py  multiple-sweeps-into-volume-scan.md  nexrad_read_chunks.md  plot-ppi.md
examples/notebooks/: Accessors.ipynb  Accessors.md  Apply_Accessor.ipynb  Assign_GeoCoords.ipynb  Assign_GeoCoords.md  Auto_Read.ipynb  CfRadial1.ipynb  CfRadial1.md  CfRadial1_Export.ipynb  CfRadial1_Export.md  CfRadial1_Model_Transformation.ipynb  CfRadial1_Model_Transformation.md  CfRadial1_full.ipynb  Furuno.ipynb  Furuno.md  GAMIC.ipynb  GAMIC.md  GAMIC_full.ipynb  HaloPhotonics.ipynb  HaloPhotonics.md  IDEAM_Radar_from_AWS.ipynb  Iris.ipynb  Iris.md  Iris_full.ipynb  MRR.ipynb  MRR.md  Mapping_Sweeps.ipynb  Mapping_Sweeps.md  Multi-Volume-Concatenation.ipynb  Multi-Volume-Concatenation.md  NDPointIndex.ipynb  NDPointIndex.md  NexradLevel2.ipynb  NexradLevel2.md  ODIM_H5.ipynb  ODIM_H5.md  ODIM_H5_full.ipynb  Open-Datatree-Engine.ipynb  Rainbow.ipynb  Rainbow.md  (+18 more)
rust/: Cargo.toml
rust/src/: chunks.rs  compression.rs  errors.rs  lib.rs  messages.rs  moments.rs  msg2.rs  msg5.rs  parser.rs  python.rs  sweep.rs  volume_header.rs
tests/: __init__.py  conftest.py  test_accessors.py  test_io.py  test_model.py  test_util.py  test_xradar.py
tests/georeference/: test_projection.py  test_transforms.py
tests/io/: test_auto_read.py  test_backend_datatree.py  test_cfradial1.py  test_cfradial2.py  test_datamet.py  test_furuno.py  test_gamic.py  test_hpl.py  test_imd.py  test_io.py  test_iris.py  test_metek.py  test_nexrad_level2.py  test_odim.py  test_rainbow.py  test_uf.py
tests/transform/: test_cfradial.py
xradar/: __init__.py  accessors.py  model.py  util.py  version.py
xradar/georeference/: __init__.py  projection.py  transforms.py
xradar/interpolate/: __init__.pxd  __init__.py  _nexrad_interpolate.pyx
xradar/io/: __init__.py  (+2 more)
(+23 files in other folders)
