[package]
name = "xradar-nexrad"
version = "0.1.0"
edition = "2021"
description = "Rust NEXRAD Level2 parser for xradar"
license = "MIT"

[lib]
name = "_nexrad_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
bzip2 = "0.5"
byteorder = "1.5"
thiserror = "2"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
opt-level = 3
